--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Voting App</title>
 
     <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.js"></script>
